After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733041 - Missing Null Pointer Checks.
Missing Null Pointer Checks.
Status: RESOLVED FIXED
Product: libxml2
Classification: Platform
Component: general
git master
Other Linux
: Normal critical
: ---
Assigned To: Daniel Veillard
libxml QA maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-11 05:37 UTC by Gaurav
Modified: 2014-07-14 08:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add Missing Null Checks. (1.37 KB, patch)
2014-07-11 05:37 UTC, Gaurav
none Details | Review

Description Gaurav 2014-07-11 05:37:19 UTC
Created attachment 280464 [details] [review]
Add Missing Null Checks.

In file relaxng.c, there are missing Null checks which could crash when try to dereference.

Please apply attached patch.
Comment 1 Daniel Veillard 2014-07-14 08:17:09 UTC
Okay applied and pushed to git as commit 54c4b1aa719beb83d6fa34181d33b5496e26f4da

  thanks !

Daniel